fix image overflow/size prob desquash

--- a/css/theme.css
+++ b/css/theme.css
@@ -93,7 +93,6 @@ body {
 .prev-img {
     display: block;
     width: 90%;
-    height: auto;
     margin-right: auto;
     margin-left: auto;
     max-height: 4in;
